fix mobile responsity "out of bound" problem

--- a/css/main.css
+++ b/css/main.css
@@ -1,168 +1,197 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-body{
-    background-color: black;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 22;
-    overflow-x: hidden;
+body {
+	background-color: black;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 22;
+	overflow-x: hidden;
 	overflow-y: hidden;
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
-a{
-    text-decoration: none;
-    color: inherit;
-}
-#logo{
-	transform: scale(0.4) translateY(-40%);
+a {
+	text-decoration: none;
+	color: inherit;
 }
 
-#cont{
+#cont {
 	position: absolute;
 	width: 100%;
-	margin: 0;
+	top:5%;
+	align-items:center;
 	align-content: center;
 	justify-content: center;
 	text-align: center;
 	display: flex;
-}
-#title{
-    position: absolute;
-    text-align: center;
-    float: left;
-    top: 50%;
-    width: 100%;
-    margin: 0 0;
-    padding: 0 0;
-    list-style: none;
-    color: white;
-}
-.text{
-    opacity: 0;
+	height: 30%;
 }
 
-.change{
-    opacity: 0;
-    position: absolute;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    float: left;
-    top: 40%;
-    width: 100%;
-    color: white;
-    margin: 0;
-    padding: 0;
+#logo {
+	display: block;
+	margin: auto;
+	padding: 0;
 }
-@media  (min-width: 481px){
-    #menus{
-        position: absolute;
-        top: 50%;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-    /*    overflow: hidden;*/
-        margin: 0;
-        padding: 0;
-        text-align: center;
-        align-content: center;
-        color: white;
-    }
 
-    .menu{
-        list-style-type: none;
-        float: left;
-        text-align: center;
-        width: 20%;
-        height: 50px;
-        line-height: 50px;
-        padding: 0;
-        margin: 0 1;
-        opacity: 0;
-           animation: changeColorout 0.5s cubic-bezier(.42, 0, .58, 1) 1;
+#title {
+	position: absolute;
+	text-align: center;
+	float: left;
+	top: 50%;
+	width: 100%;
+	margin: 0 0;
+	padding: 0 0;
+	list-style: none;
+	color: white;
+}
+
+.text {
+	opacity: 0;
+}
+
+.change {
+	opacity: 0;
+	position: absolute;
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	float: left;
+	top: 40%;
+	width: 100%;
+	color: white;
+	margin: 0;
+	padding: 0;
+}
+
+@media (min-width: 481px) {
+	#logo {
+		transform: scale(0.4) translateY(-40%);
 	}
-    .menu:hover{
-        background-color: rgb(100, 100, 100);
-        animation: changeColorin 0.5s cubic-bezier(.42, 0, .58, 1) 1;
-    }
 
-    .menu a{
-        width: 100%;
-        line-height: 20%;
-        border-radius: 20%;
-        text-align: center;
-    }
+	#menus {
+		position: absolute;
+		top: 50%;
+		width: 100%;
+		align-items: center;
+		justify-content: center;
+		display: flex;
+		/*    overflow: hidden;*/
+		margin: 0;
+		padding: 0;
+		text-align: center;
+		align-content: center;
+		color: white;
+	}
+
+	.menu {
+		list-style-type: none;
+		float: left;
+		text-align: center;
+		width: 20%;
+		height: 50px;
+		line-height: 50px;
+		padding: 0;
+		margin: 0 1;
+		opacity: 0;
+		animation: changeColorout 0.5s cubic-bezier(.42, 0, .58, 1) 1;
+	}
+
+	.menu:hover {
+		background-color: rgb(100, 100, 100);
+		animation: changeColorin 0.5s cubic-bezier(.42, 0, .58, 1) 1;
+	}
+
+	.menu a {
+		width: 100%;
+		line-height: 20%;
+		border-radius: 20%;
+		text-align: center;
+	}
 }
+
 @media (min-width: 320px) and (max-width: 480px) {
-    #menus{
-        position: absolute;
-        top: 50%;
-        left: 25%;
-        width: 50%;
-        height: 30%;
-        margin: 0;
-        padding: 0;
-        display: block;
-        text-align: center;
-        align-content: center;
-        color: white;
-    }
-
-    .menu{
-		display: list-item;
-        position: relative;
-        list-style: none;
-        background-color: rgb(0,0,0);
-        opacity: 0;
-        top: 20%;
-        height: 50px;
-        line-height: 50px;
-        text-align: center;
-        animation: changeColorout 0.5s cubic-bezier(.42, 0, .58, 1) 1;
+	#menus {
+		position: absolute;
+		top: 50%;
+		left: 25%;
+		width: 50%;
+		height: 30%;
+		margin: 0;
+		padding: 0;
+		display: block;
+		text-align: center;
+		align-content: center;
+		color: white;
 	}
-    .menu:hover{
-        background-color: rgb(100, 100, 100);
-        animation: changeColorin 0.5s cubic-bezier(.42, 0, .58, 1) 1;
-    }
 
-    #logodrawing{
-        top: 0%;
-    }
-}
-@keyframes changeColorin{
-	from{background-color: rgb(0,0,0);}
-	to{background-color: rgb(100, 100, 100);}
-}
-@keyframes changeColorout{
-	from{background-color: rgb(100, 100, 100);}
-	to{background-color: rgb(0,0,0);}
+	.menu {
+		display: list-item;
+		position: relative;
+		list-style: none;
+		background-color: rgb(0, 0, 0);
+		opacity: 0;
+		top: 20%;
+		height: 50px;
+		line-height: 50px;
+		text-align: center;
+		animation: changeColorout 0.5s cubic-bezier(.42, 0, .58, 1) 1;
+	}
+
+	.menu:hover {
+		background-color: rgb(100, 100, 100);
+		animation: changeColorin 0.5s cubic-bezier(.42, 0, .58, 1) 1;
+	}
+
+	#logo {
+		transform: scale(0.4) translateY(-40%);
+	}
 }
 
-#powered{
-    position: absolute;
-    opacity: 0.7;
-    width: 100%;
-    height: auto;
-    display:flex;
-    justify-content: center;
-    text-align: center;
-   	bottom: -10%;
-    float: left;
-    font-size: 12px;
-    color: rgb(114, 114, 114);
+@keyframes changeColorin {
+	from {
+		background-color: rgb(0, 0, 0);
+	}
+
+	to {
+		background-color: rgb(100, 100, 100);
+	}
 }
-svg{
+
+@keyframes changeColorout {
+	from {
+		background-color: rgb(100, 100, 100);
+	}
+
+	to {
+		background-color: rgb(0, 0, 0);
+	}
+}
+
+#powered {
+	position: absolute;
+	opacity: 0.7;
+	width: 100%;
+	height: auto;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	bottom: -10%;
+	float: left;
+	font-size: 12px;
+	color: rgb(114, 114, 114);
+}
+
+svg {
 	overflow: visible;
 }
 
 
-#powered p{
-    position: relative;
+#powered p {
+	position: relative;
 }
-#powered p a{
-    text-decoration: underline;
+
+#powered p a {
+	text-decoration: underline;
 	color: white;
 	opacity: 1;
 }
